build/build_cmd.log
Version MSBuild 17.14.23+b0019275e pour .NET Framework

  Compiling CUDA source file ..\P1RV_CUDA\main.cu...
  
  C:\Users\flole\Desktop\P1RV_CUDA\build>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe"  --use-local-env -ccbin "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.42.34433\bin\HostX64\x64" -x cu -rdc=true  -IC:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"     --keep-dir P1RV_CUDA\x64\Release  -maxrregcount=0    --machine 64 --compile -cudart static -std=c++17 --generate-code=arch=compute_89,code=[compute_89,sm_89] -Xcompiler="/EHsc -Ob2 /openmp"   -D_WINDOWS -DNDEBUG -DNOMINMAX -D"CMAKE_INTDIR=\"Release\"" -D_MBCS -DWIN32 -D_WINDOWS -DNDEBUG -DNOMINMAX -D"CMAKE_INTDIR=\"Release\"" -Xcompiler "/EHsc /W1 /nologo /O2 /FS   /MD /GR" -Xcompiler "/FdP1RV_CUDA.dir\Release\vc143.pdb" -o P1RV_CUDA.dir\Release\main.obj "C:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA\main.cu" 
  main.cu
  tmpxft_00003708_00000000-7_main.cudafe1.cpp
  Compiling CUDA source file ..\P1RV_CUDA\lsmc.cu...
  
  C:\Users\flole\Desktop\P1RV_CUDA\build>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe"  --use-local-env -ccbin "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.42.34433\bin\HostX64\x64" -x cu -rdc=true  -IC:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"     --keep-dir P1RV_CUDA\x64\Release  -maxrregcount=0    --machine 64 --compile -cudart static -std=c++17 --generate-code=arch=compute_89,code=[compute_89,sm_89] -Xcompiler="/EHsc -Ob2 /openmp"   -D_WINDOWS -DNDEBUG -DNOMINMAX -D"CMAKE_INTDIR=\"Release\"" -D_MBCS -DWIN32 -D_WINDOWS -DNDEBUG -DNOMINMAX -D"CMAKE_INTDIR=\"Release\"" -Xcompiler "/EHsc /W1 /nologo /O2 /FS   /MD /GR" -Xcompiler "/FdP1RV_CUDA.dir\Release\vc143.pdb" -o P1RV_CUDA.dir\Release\/P1RV_CUDA/lsmc.cu.obj "C:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA\lsmc.cu" 
C:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA\lsmc.cu(460): error : identifier "sum_reduce_kernel" is undefined [C:\Users\flole\Desktop\P1RV_CUDA\build\P1RV_CUDA.vcxproj]
      sum_reduce_kernel<<<gridRed, 256>>>(d_cashflows, d_totalSum, N_paths);
      ^
  
  1 error detected in the compilation of "C:/Users/flole/Desktop/P1RV_CUDA/P1RV_CUDA/lsmc.cu".
  lsmc.cu
C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 13.1.targets(803,9): error MSB3721: La commande ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\bin\nvcc.exe"  --use-local-env -ccbin "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Tools\MSVC\14.42.34433\bin\HostX64\x64" -x cu -rdc=true  -IC:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v13.1\include"     --keep-dir P1RV_CUDA\x64\Release  -maxrregcount=0    --machine 64 --compile -cudart static -std=c++17 --generate-code=arch=compute_89,code=[compute_89,sm_89] -Xcompiler="/EHsc -Ob2 /openmp"   -D_WINDOWS -DNDEBUG -DNOMINMAX -D"CMAKE_INTDIR=\"Release\"" -D_MBCS -DWIN32 -D_WINDOWS -DNDEBUG -DNOMINMAX -D"CMAKE_INTDIR=\"Release\"" -Xcompiler "/EHsc /W1 /nologo /O2 /FS   /MD /GR" -Xcompiler "/FdP1RV_CUDA.dir\Release\vc143.pdb" -o P1RV_CUDA.dir\Release\/P1RV_CUDA/lsmc.cu.obj "C:\Users\flole\Desktop\P1RV_CUDA\P1RV_CUDA\lsmc.cu"" s'est arrêtée avec le code 2. [C:\Users\flole\Desktop\P1RV_CUDA\build\P1RV_CUDA.vcxproj]
  cuda_core.vcxproj -> C:\Users\flole\Desktop\P1RV_CUDA\build\Release\cuda_core.lib
